force-app/main/default/objects/BillingSchedule__c.object
<CustomObject>
    <description>Object to define the billing schedule of an opportunity or a project.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingAmount__c</fullName>
        <description>Amount billed</description>
        <label>Billing Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingDate__c</fullName>
        <description>Billing Date</description>
        <label>Billing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ForecastedAmount__c</fullName>
        <formula>if(Opportunity__c != null,Opportunity__r.Probability*BillingAmount__c, BillingAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billing Schedule</relationshipLabel>
        <relationshipName>BillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFIVEPROJ__Project__c</referenceTo>
        <relationshipLabel>Billing Schedules</relationshipLabel>
        <relationshipName>Billing_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BillingAmount__c</columns>
        <columns>BillingDate__c</columns>
        <columns>ForecastedAmount__c</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BS-{0000000}</displayFormat>
        <label>Billing Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>